--- a/_posts/2014-09-23-sailor-z.md
+++ b/_posts/2014-09-23-sailor-z.md
@@ -6,3 +6,7 @@ category:
 tags: []
 ---
 {% include JB/setup %}
+
+## This is the day we purchased our 1976 Catalina 22 sailboat from a lovely couple in the Seattle area.
+
+![Alt text](/assets/NewCatalina22Sailboat.jpg "The Hubble")
