--- a/_posts/2014-09-23-sailor-z.md
+++ b/_posts/2014-09-23-sailor-z.md
@@ -1,12 +1,16 @@
 ---
 layout: post
-title: "Sailor Z"
-description: ""
+title: "The Hubble"
+description: "Sailor project 2014"
 category: 
-tags: []
+tags: [sailing]
 ---
 {% include JB/setup %}
 
-## This is the day we purchased our 1976 Catalina 22 sailboat from a lovely couple in the Seattle area.
+#July 27th 2014
+
+##We finally bought the boat.
 
 ![Alt text](/assets/NewCatalina22Sailboat.jpg "The Hubble")
+
+
